fix bugs seen from jacontebe